--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "devtest": "DEBUG=mongoose-plugin-soft-deleted mocha --exit"
   },
   "engines": {
     "node": "^9.11.1 || ^8.11.1"
