--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "node": "^9.11.1 || ^8.11.1"
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "lodash": "^4.17.5",
     "mocha": "^5.1.1",
+    "moment": "^2.22.1",
     "standard": "^11.0.1"
   },
   "dependencies": {
-    "@types/mongoose": "^5.0.10",
-    "lodash": "^4.17.5",
-    "mongoose": "^5.0.15"
+    "@types/mongoose": "5.0.x",
+    "mongoose": "5.0.x"
   }
 }
