--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongoose-plugin-soft-deleted",
   "version": "0.0.1",
-  "description": "a plugin for mongoose adding soft delete features",
+  "description": "a plugin for mongoose 5.0.x adding soft delete features",
   "main": "index.js",
   "author": "tan90 <tan90indream@163.com>",
   "license": "MIT",
